# NoktoBackend

./: .gitignore  Cargo.toml  README.md  Rocket.toml  db.sqlite
migrations/2023-09-30-124226_users/: down.sql  up.sql
migrations/2023-09-30-211725_encounters/: up.sql
src/: database.rs  main.rs  routes.rs
src/database/: diesel.rs  models.rs  schema.rs
src/database/models/: encounters.rs  users.rs
src/logic/: auth.rs  user.rs
src/routes/encounters/: add.rs  get.rs
src/routes/user/: login.rs
