[package]
name = "nokto_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
serde = "1.0"
diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15"
rand = "0.8"
# time = "0.3"
chrono = { version = "0.4", features = ["serde"]}